--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -1,32 +1,38 @@
 intents:
- - greet
- - thank
- - bye
- - ask_func_list
- - ask_name
+  - greet
+  - goodbye
+  - affirm
+  - deny
+  - mood_great
+  - mood_unhappy
+  - bot_challenge
+  - product_question
+  - best_product_question
+  - thank
+  - ask_func_list
+  - ask_name
 
 
 templates:
- utter_greet:
-  - text: "Kính chào Quý khách!"
- utter_bye:
-  - text: "Kính chào tạm biệt và mong sớm gặp lại quý khách!"
-  - text: "Kính chào tạm biệt và chúc quý khách một ngày tốt lành!"
- utter_thank:
-  - text: "Cảm ơn quý khách quá khen ah!"
-  - text: "Dạ không có gì, đó là trách nhiệm của em mà!"
- utter_func_list:
-  - text: "Em chỉ chat thôi!"
- utter_ask_name:
-  - text: "Em là chatbot của website laptop này ạ! Quý khách cần trợ giúp gì ạ?"
-  - text: "Dạ thưa. Em là Trợ lý ảo website laptop"
- utter_unclear:
-  - text: "Thưa quý khách, hiện tại tôi chưa hiểu được yêu cầu của Quý khách. "
-
-actions:
- - utter_greet
- - utter_bye
- - utter_unclear
- - utter_func_list
- - utter_thank
- - utter_ask_name
+  utter_greet:
+    - text: "Kính chào Quý khách!"
+  utter_bye:
+    - text: "Kính chào tạm biệt và mong sớm gặp lại quý khách!"
+    - text: "Kính chào tạm biệt và chúc quý khách một ngày tốt lành!"
+  utter_thank:
+    - text: "Cảm ơn quý khách quá khen ah!"
+    - text: "Dạ không có gì, đó là trách nhiệm của em mà!"
+  utter_func_list:
+    - text: "Em chỉ chat thôi!"
+  utter_ask_name:
+    - text: "Em là chatbot của website laptop này ạ! Quý khách cần trợ giúp gì ạ?"
+    - text: "Dạ thưa. Em là Trợ lý ảo website laptop"
+  utter_unclear:
+    - text: "Thưa quý khách, hiện tại tôi chưa hiểu được yêu cầu của Quý khách. "
+  utter_best_product_question:
+    - text: "http://127.0.0.1:3500/product/1"
+  utter_did_that_help:
+    - text: "Cố lên!"
+    - text: "chaiyo"
+  utter_cheer_up:
+    - text: 'Cố lên!'
