--- a/domain.yml
+++ b/domain.yml
@@ -1,33 +1,36 @@
 version: "3.1"
 
 intents:
-  - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
+- greet
+- goodbye
+- affirm
+- deny
+- mood_great
+- mood_unhappy
+- bot_challenge
+- product_question
+- best_product_question
+- thank
+- ask_func_list
+- ask_name
 
 responses:
   utter_greet:
-  - text: "Hey! How are you?"
-
+  - text: "Xin chào bạn!"
   utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
+  - text: "Tôi có cái này hay nè:"
   utter_did_that_help:
-  - text: "Did that help you?"
-
+  - text: "Tôi có thể giúp gì cho bạn?"
   utter_happy:
-  - text: "Great, carry on!"
-
+  - text: "Tuyệt vời!"
   utter_goodbye:
-  - text: "Bye"
-
+  - text: "Tạm biệt"
   utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
+  - text: "Tôi là chatbot."
+  utter_best_product_question:
+  - text: "http://127.0.0.1:3500/product/1"
+  utter_ask_name:
+  - text: "Tôi là bot"
 
 session_config:
   session_expiration_time: 60
